--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 __history
 build
 *.exe
+*.dll
+*.log
+*.err
+*.esym
+*.hex
+*.sym
+*.lst
+*.cof
+*.ccspjt
+*.tre
+*.STA
+*.xsym
+.generated_files
+build
+debug
+dist
+nbproject
